# JoCoding-OpenAI-Hackathon

./: .gitignore  PRD.md  README.md  똑장-오프라인파트-상세기획서.md  똑장아이디어기획안.ipynb  중간보고서.md
.claude/: settings.local.json
backend/: HANDOFF.md  README.md  check_mall_names.py  melodic-mapping-raccoon.md  pyproject.toml  requirements.txt  verify_mart_filter.py  verify_preferences.py
backend/app/: main.py
backend/app/application/services/: canonicalization.py  chat_service.py  mall_comparer.py
backend/app/core/: config.py  dependencies.py  exceptions.py
backend/app/schemas/: basket.py  chat.py  plan.py  preference.py  setup.py
backend/mock/: _gen_prices.py  prices.json  products.json  stores.json
backend/mock/ui-demo/: index.html  ui-demo.js
backend/scripts/: seed_mock_data.py  sync_kamis_prices.py
backend/src/: config.py  main.py
backend/src/api/: dependencies.py  routes.py
backend/src/application/: __init__.py  plan_service.py  product_matcher.py  ranking_engine.py
backend/src/domain/: protocols.py  types.py
backend/src/ttokjang_offline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/tests/: conftest.py  test_api_routes.py  test_cache_service.py  test_kamis_sync.py  test_plan_service.py  test_product_matcher.py  test_provider_budget.py  test_ranking_engine.py  test_support.py
똑장ver2/backend/: README.md  alembic.ini  conftest.py  pyproject.toml  run_backend.sh  test_plan.sh
똑장ver2/backend/alembic/: env.py
똑장ver2/backend/src/: main.py
똑장ver2/backend/tests/: test_api.py  test_canonicalization.py  test_graph_parsing.py  test_models.py  test_offline_integration.py  test_online_pricing_guards.py  test_prompt_loader.py  test_ranking.py
(+230 files in other folders)
